# hyper-eval

./: README.md  hyper-eval.cabal  stack.yaml
app/: Main.hs
data/: Demo.hhs
src/: HyperEval.hs
src/Hyper/: Eval.hs
test/: Spec.hs
