name:                hyper-eval
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ejconlon/hyper-eval#readme
license:             BSD3
license-file:        LICENSE
author:              Eric Conlon
maintainer:          ejconlon@gmail.com
copyright:           2016 Eric Conlon
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HyperEval
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , optparse-applicative
  default-language:    Haskell2010

executable hyper-eval-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hyper-eval
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ejconlon/hyper-eval
